# elisabeth_usecase

./: Cargo.toml  README.md
data/circuit/fmnist_zonnx_N_2048/elisabeth_fmnist_exe/: bias_16_casted.npz  bias_7_casted.npz  compilation_data.yaml  constant_to_add_25_casted.npz  constant_to_add_33_casted.npz  constant_to_add_8_casted.npz  nodes.json  nodes.yaml  nodes_summary.txt  pbs_indexes_2.npz  pbs_test_vectors_10_casted.npz  pbs_test_vectors_19_casted.npz  pbs_test_vectors_27_casted.npz  pbs_test_vectors_2_casted.npz  sample_for_rte_15_casted.npz  sample_for_rte_16_casted.npz  sample_for_rte_17_casted.npz  sample_for_rte_19_casted.npz  sample_for_rte_24_casted.npz  sample_for_rte_25_casted.npz  sample_for_rte_27_casted.npz  sample_for_rte_2_casted.npz  sample_for_rte_32_casted.npz  sample_for_rte_33_casted.npz  sample_for_rte_34_casted.npz  sample_for_rte_7_casted.npz  sample_for_rte_8_casted.npz  sample_for_rte_9_casted.npz  weight_16_casted.npz
data/circuit/fmnist_zonnx_N_2048/elisabeth_fmnist_exe_onnx/: 10_constants_in_torus.onnx  10_constants_in_torus.onnx.txt  12_to_get_samples_pre_mod_1.onnx  12_to_get_samples_pre_mod_1.onnx.txt  13_to_get_samples_mod_1.onnx  13_to_get_samples_mod_1.onnx.txt  14_exported_model.onnx  _0_original_model.onnx  _0_original_model.onnx.txt  _1_optimized_model.onnx  _2_after_replacement_model.onnx  _2_after_replacement_model.onnx.txt  _3_prepared_for_discretization_model.onnx  _3_prepared_for_discretization_model.onnx.txt  _4_prepared_for_discretization_and_encoding_model.onnx  (+11 more)
src/: fhe.rs  fmnist.rs  main.rs  vm.rs
src/vm/: to.rs
(+33 files in other folders)
